
AM_CFLAGS = @LIBVISUAL_CFLAGS@ -fopenmp

noinst_LTLIBRARIES = libavs.la

libavs_la_SOURCES = avs_gfx.c \
		    avs_gfx.h \
		    avs_sound.c \
		    avs_sound.h \
		    avs_config.c \
		    avs_config.h \
		    avs_blend.h \
			avs_blend.h \
			avs_blend.c \
			avs_globals.c \
			avs_globals.h \
			avs_matrix.c \
			avs_matrix.h

