
noinst_LTLIBRARIES = libavs.la

LIBS += -L. -L$(prefix)/lib $(XML_LIBS) $(GLIB_LIBS) $(LIBVISUAL_LIBS) $(XML_LIBS)

AM_CFLAGS = $(XML_CFLAGS) $(GLIB_CFLAGS) $(LIBVISUAL_CFLAGS) $(XML_CFLAGS)

libavs_la_SOURCES = avs_gfx.c \
		    avs_gfx.h \
		    avs_sound.c \
		    avs_sound.h \
		    avs_config.c \
		    avs_config.h \
		    avs_blend.h \
			avs_blend.h \
			avs_blend.c \
			avs_globals.c \
			avs_globals.h \
			avs_matrix.c \
			avs_matrix.h \
            lvavs_preset.c \
            lvavs_preset.h \
            lvavs_pipeline.c \
            lvavs_pipeline.h

