
AM_CFLAGS = @LIBVISUAL_CFLAGS@

noinst_LTLIBRARIES = libvisscript.la

libvisscript_la_SOURCES = avs_functions.c avs_il_tree.c avs_lexer.c \
			  avs_x86_opcode.c avs_il_assembler.c avs_il_tree_node.c \
			  avs_parser.c avs_blob.c avs_il_core.c \
			  avs_runnable.c avs_blob_pool.c avs_il_instruction.c avs_ix_compiler.c \
			  avs_stack.c avs_compiler.c avs_il_register.c avs_ix_machine.c \
			  avs_x86_compiler.c avs_debug.c \
			  avs.h avs_il_tree_node.h avs_parser.h avs_blob.h \
			  avs_il_assembler.h avs_parser_private.h \
			  avs_blob_pool.h avs_il_core.h avs_ix_compiler.h avs_parser_table.h \
			  avs_x86_compiler.h avs_compiler.h avs_il_instruction.h avs_ix.h avs_runnable.h \
			  avs_x86.h avs_functions.h avs_il_register.h avs_ix_machine.h avs_stack.h \
			  avs_x86_opcode.h avs_functions.perf.h avs_il_tree.h avs_lexer.h \
			  avs_x86_opcode_table.h

