AM_CXXFLAGS = $(CXXFLAGS) $(LV_CFLAGS) -I $(top_srcdir)
AM_LDFLAGS  = $(top_builddir)/libvisual-cpp/libvisual-cpp.la

noinst_PROGRAMS = \
	libvisual-cpp \
	lv_color      \
	lv_config     \
	lv_cpu        \
	lv_fourier    \
	lv_function   \
	lv_math       \
	lv_object     \
	lv_palette    \
	lv_random     \
	lv_rectangle  \
	lv_thread     \
	lv_time       \
	lv_utils      \
	lv_video

libvisual_cpp_SOURCES = libvisual_cpp.cpp
lv_color_SOURCES = lv_color.cpp
lv_config_SOURCES = lv_config.cpp
lv_cpu_SOURCES = lv_cpu.cpp
lv_fourier_SOURCES = lv_fourier.cpp
lv_function_SOURCES = lv_function.cpp
lv_math_SOURCES = lv_math.cpp
lv_object_SOURCES = lv_object.cpp
lv_random_SOURCES = lv_random.cpp
lv_rectangle_SOURCES = lv_rectangle.cpp
lv_palette_SOURCES = lv_palette.cpp
lv_thread_SOURCES = lv_thread.cpp
lv_time_SOURCES = lv_time.cpp
lv_utils_SOURCES = lv_utils.cpp
lv_video_SOURCES = lv_video.cpp
