## Process this file with automake to produce Makefile.in

pkgdatadir = $(datadir)/libvisual/actor/actor_gforce/GForceDeltaFields
pkgdata_DATA = \
Accident \
Claustrophobia \
Contrail \
Diamond \
(DJK)TraverseAmbit \
Donut \
Dreamscape \
Eyes \
Flamage \
Flee \
Freezymelt \
Galaxy \
Gravity \
Hip-no-Therapy \
Krabben \
Marble \
Nexus-Zero \
Noise \
Nowhere \
one \
Paint \
Poinsetta \
Sincos \
Sphere \
Sunburst \
Swirly \
Tiles \
TimeWarp \
Twister \
Yes

EXTRA_DIST = $(pkgdata_DATA)

